even page update

--- a/app/views/event-page.html
+++ b/app/views/event-page.html
@@ -34,15 +34,17 @@
 
         <h1 class="bold-large">DIT ‘Meet the buyer’ at Tradexpo</h1>
 
-          <h2 class="font-lead">14  to 18 January 2018 in Paris, France.</h2>
+          <h2 class="font-lead">14  to 18 January 2018 in Paris, France</h2>
 
 
           <br/>
             <h3 style="font-size:18px;font-weight:normal">Connect with 200 major retail buyers over the course of 4 days, at Tradexpo Paris</h3>
-
-            <p>'Meet the buyer' series is part of the wider Tradexpo Paris event - to attend, you need to have also registered for general entry to Tradexpo.</p>
           <br/>
 
+          <!--
+            <p>'Meet the buyer' series is part of the wider Tradexpo Paris event - to attend, you need to have also registered for general entry to Tradexpo.</p>
+          <br/>
+            -->
 
           <div>
               <div>
@@ -77,15 +79,19 @@
 
         <br/>
 
-            <div style="margin-bottom:30px; margin-top:20px;">
-                <h4 class="bold-small">Eligibility</h4>
-                <p style="white-space: pre-line;" >To attend this ‘Meet the buyer’ event, you need to have registered for general entry to Tradexpo Paris.</p>
-            </div>
 
+        <div style="margin-bottom:30px; margin-top:20px;">
+            <h4 class="bold-small">Eligibility</h4>
+            <p style="white-space: pre-line;" >To attend this ‘Meet the buyer’ event, you need to have registered for general entry to Tradexpo Paris.</p>
+        </div>
 
+        <div style="display: flex; flex-direction: row; margin-bottom:20px;" >
+            <a href="http://www.tradexpo.fr/" target="_blank"   class="button button-blue">Register for Tradexpo</a>
+            <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;"></p>
+        </div>
 
           <div style="display: flex; flex-direction: row;" >
-              <a href="/register/sign-in-or-create-account-eventbrite" class="button button-blue">Register</a>
+              <a href="/register/sign-in-or-create-account-eventbrite" class="button button-blue">Register for meet the buyer</a>
               <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Cost: Free</p>
           </div>
 
