--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,6 +22,14 @@
       </h1>
 
 
+      <h2 class="heading-medium">December 2017</h2>
+
+      <br/>
+      <p><a href="/return-journey/great-home">Great homepage</a></p>
+      <br/>
+      <br/>
+
+
       <h2 class="heading-medium">November 2017</h2>
 
       <br/>
