first draft of cancel journey

--- a/app/views/return-journey/cancel-success.html
+++ b/app/views/return-journey/cancel-success.html
@@ -3644,52 +3644,28 @@
 
 
 <div id="content" class="sso-content outer-container">
-	<div class="span6">
+	<div class="">
 
 
 		<div class="input-field-container">
 
 
-			<h1>Sign in</h1>
+			<h2 style="margin-bottom:40px;">Your attendance has been cancelled</h2>
+
+
+			<p>Thanks you for cancelling.</p>
+
+			<p style="margin-bottom:10px;">Your place can now be given to another attendee.</p>
+
+
+
+			<p>
+				<a class="button secondaryAction" href="#" style="padding-left:0px; margin-top:10px; text-decoration: underline; ">View my events</a>
+			</p>
 
 
 
 
-			<p>If you have not created an account yet, then please
-				<a href="#">register</a> first.</p>
-
-
-			<form class="login" method="POST" action="#">
-				<input type="hidden" name="csrfmiddlewaretoken" value="Gf6kkpz9e0ux8STC9X08BbxA1h5SducDd7we9g9T73Broa1BIhpDRowU1ggnkJnC">
-				<p><label for="id_login">Email:</label> <input type="email" name="login" id="id_login" autocomplete="new-password" placeholder="Email address" required="" autofocus="autofocus"></p>
-				<p><label for="id_password">Password:</label> <input type="password" name="password" id="id_password" autocomplete="new-password" placeholder="Password" required=""></p>
-				<p>
-				</p><div class="form-field checkbox">
-				<input type="checkbox" name="remember" id="id_remember">
-				<label for="id_remember">Remember me:</label>
-			</div>
-				<p></p>
-
-
-				<a href="/return-journey/great-sud-events"
-				   style="
-					width: auto;
-					background-color: #00549F;
-					padding: .5em;
-					border: none;
-					border-radius: 0;
-					line-height: 1.25;
-					text-decoration: none;
-					-webkit-font-smoothing: antialiased;
-					cursor: pointer;
-					color: #fff;
-					box-sizing: border-box;
-					font-size: 19px;
-					font-family: 'Roboto', sans-serif;
-					font-weight:400;"
-				>Login</a>
-				<!--  <button class="primaryAction" type="submit">Login</button>   -->
-				<a class="button secondaryAction" href="#">Reset your password</a>
 			</form>
 
 
