--- a/app/views/return-journey/cancel-confirm.html
+++ b/app/views/return-journey/cancel-confirm.html
@@ -3644,52 +3644,51 @@
 
 
 <div id="content" class="sso-content outer-container">
-	<div class="span6">
+	<div class="">
 
 
 		<div class="input-field-container">
 
 
-			<h1>Sign in</h1>
+			<h2 style="margin-bottom:40px;">Confirmation attendance cancellation</h2>
 
 
-
-
-			<p>If you have not created an account yet, then please
-				<a href="#">register</a> first.</p>
-
-
-			<form class="login" method="POST" action="#">
-				<input type="hidden" name="csrfmiddlewaretoken" value="Gf6kkpz9e0ux8STC9X08BbxA1h5SducDd7we9g9T73Broa1BIhpDRowU1ggnkJnC">
-				<p><label for="id_login">Email:</label> <input type="email" name="login" id="id_login" autocomplete="new-password" placeholder="Email address" required="" autofocus="autofocus"></p>
-				<p><label for="id_password">Password:</label> <input type="password" name="password" id="id_password" autocomplete="new-password" placeholder="Password" required=""></p>
-				<p>
-				</p><div class="form-field checkbox">
-				<input type="checkbox" name="remember" id="id_remember">
-				<label for="id_remember">Remember me:</label>
+			<div style="margin-bottom:50px;">
+				<p style="font-weight:700; margin-bottom:10px;">Event:&nbsp;&nbsp;&nbsp; <span style="font-weight:400;">Luxury is great showcase in Milan</span> </p>
+				<p style="font-weight:700;">Date:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span style="font-weight:400;">5 December 2017 to 7 January 2018</span> </p>
 			</div>
-				<p></p>
 
 
-				<a href="/return-journey/great-sud-events"
-				   style="
-					width: auto;
-					background-color: #00549F;
-					padding: .5em;
-					border: none;
-					border-radius: 0;
-					line-height: 1.25;
-					text-decoration: none;
-					-webkit-font-smoothing: antialiased;
-					cursor: pointer;
-					color: #fff;
-					box-sizing: border-box;
-					font-size: 19px;
-					font-family: 'Roboto', sans-serif;
-					font-weight:400;"
-				>Login</a>
-				<!--  <button class="primaryAction" type="submit">Login</button>   -->
-				<a class="button secondaryAction" href="#">Reset your password</a>
+
+
+
+
+
+			<a href="/return-journey/cancel-success"
+			   style="
+				width: auto;
+				background-color: #00549F;
+				padding: .5em;
+				border: none;
+				border-radius: 0;
+				line-height: 1.25;
+				text-decoration: none;
+				-webkit-font-smoothing: antialiased;
+				cursor: pointer;
+				color: #fff;
+				box-sizing: border-box;
+				font-size: 19px;
+				font-family: 'Roboto', sans-serif;
+				font-weight:400;"
+			>Cancel attendance - I am not attending</a>
+			<!--  <button class="primaryAction" type="submit">Login</button>   -->
+
+			<p>
+				<a class="button secondaryAction" href="#" style="padding-left:0px; margin-top:20px; text-decoration: underline; ">Don't cancel - I will be attending</a>
+			</p>
+
+
+
 			</form>
 
 
