--- a/app/views/return-journey/cancel-success.html
+++ b/app/views/return-journey/cancel-success.html
@@ -3652,25 +3652,18 @@
 
 			<h2 style="margin-bottom:40px;">Your attendance has been cancelled</h2>
 
-
 			<p>Thanks you for cancelling.</p>
 
 			<p style="margin-bottom:10px;">Your place can now be given to another attendee.</p>
 
-
-
 			<p>
-				<a class="button secondaryAction" href="#" style="padding-left:0px; margin-top:10px; text-decoration: underline; ">View my events</a>
+				<a class="button secondaryAction" href="/return-journey-great-sud-events" style="padding-left:0px; margin-top:10px; text-decoration: underline; ">View my events</a>
 			</p>
-
-
 
 
 			</form>
 
-
 		</div>
-
 
 	</div>
 
