--- a/app/views/return-journey/great-sud-events.html
+++ b/app/views/return-journey/great-sud-events.html
@@ -723,7 +723,7 @@
                     <li class=""><a href="/return-journey/great-sud-export-opps">Export opportunities</a></li>
                     <li class="active"><a href="/return-journey/great-sud-events">Events</a></li>
                     <li class=""><a href="/return-journey/great-sud-fab">Find a buyer</a></li>
-                    <li class=""><a href="#">Selling online overseas</a></li>
+                    <li class=""><a href="/return-journey/great-sud-soo">Selling online overseas</a></li>
                     <li class=""><a href="/return-journey/great-sud-about">About</a></li>
                 </ul>
             </div>
