updates to registration journey

--- a/app/views/event-page.html
+++ b/app/views/event-page.html
@@ -91,7 +91,7 @@
         </div>
 
           <div style="display: flex; flex-direction: row;" >
-              <a href="/register/sign-in-or-create-account-eventbrite" class="button button-blue">Register for meet the buyer</a>
+              <a href="https://www.eventbrite.co.uk/e/dit-meet-the-buyer-at-tradexpo-tickets-39948447883#tickets" class="button button-blue">Register for meet the buyer</a>
               <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Cost: Free</p>
           </div>
 
