updates to event page

--- a/app/views/includes/great-header-event-page.html
+++ b/app/views/includes/great-header-event-page.html
@@ -19,6 +19,7 @@
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    padding:0 25px;
 }
 
 .navigation-main-section.outer-container {
@@ -82,9 +83,11 @@ main#content {max-width: 1200px}
       </div>
       <div class="background--great-blue">
         <div class="outer-container">
+
           <a href="https://export.great.gov.uk/" title="Go to the Exporting is GREAT homepage" class="navigation-logo-link float--left">
             <img src="/public/great-library/images/eig_logo_horizontal.svg" alt="Exporting is GREAT logo" class="navigation-logo">
           </a>
+
         </div>
       </div>
       <div class="navigation-main background--dark-blue">
