updates to internal mvp journey

--- a/app/views/includes/great-header-preview-page.html
+++ b/app/views/includes/great-header-preview-page.html
@@ -68,9 +68,9 @@ main#content {max-width: 1200px}
                     Share draft: <span style="font-weight:400">www.great.gov.uk/event/mh43dz</span>
                 </p>
 
-                <p style="font-size:16px;" align="left"><a style="font-family: Arial,sans-serif;" href="/create-event/summary">Back to event summary</a></p>
+                <p style="font-size:16px;" align="left"><a style="font-family: Arial,sans-serif;" href="summary">Back to event summary</a></p>
 
-                <p style="font-size:16px;" align="left"><a style="font-family: Arial,sans-serif;" href="/account#draft-events">Account home</a></p>
+                <p style="font-size:16px;" align="left"><a style="font-family: Arial,sans-serif;" href="/events-home_v2">Account home</a></p>
 
                 <p><a class="button-secondary" style="font-family: Arial,sans-serif; padding: .526315em .789473em .263157em;  font-size: 1.2em;   line-height: 1.25;
               " href="/create-event/go-live-now">Make event live</a></p>
