--- a/app/views/create-event/mvp-internal/index.html
+++ b/app/views/create-event/mvp-internal/index.html
@@ -46,27 +46,27 @@ a.link:visited, a:visited {color:#005ea5 !important};
     <tr>
       <th scope="row">DIT ‘Meet the buyer’ at Tradexpo</th>
       <td class="numeric grey"><a href="">www.great.gov.uk/events/123456</a></td>
-      <td class="numeric"><a href="edit-triage">Edit</a></td>
+      <td class="numeric"><a href="mvp-internal/edit-triage">Edit</a></td>
       <td class="numeric"><a href="https://www.eventbrite.co.uk/myevent?eid=39948447883">Manage</a></td>
       <td class="numeric"><a href="https://admin.b2match.com/e/2832">Manage</a></td>
     </tr>
     <tr>
       <th scope="row">DIT ‘Meet the buyer’ at Tradexpo</th>
-      <td class="numeric grey">Not published<br><a href="add-tags">Publish to GREAT</a></td>
+      <td class="numeric grey">Not published<br><a href="mvp-internal/add-tags">Publish to GREAT</a></td>
       <td class="numeric"><a href="https://www.eventbrite.co.uk/edit?eid=39948447883">Edit</a></td>
       <td class="numeric"><a href="https://www.eventbrite.co.uk/myevent?eid=39948447883">Manage</a></td>
       <td class="numeric"><a href="https://admin.b2match.com/e/2832">Manage</a></td>
     </tr>
     <tr>
       <th scope="row">DIT ‘Meet the buyer’ at Tradexpo</th>
-      <td class="numeric grey">Not published<br><a href="add-tags">Publish to GREAT</a></td>
+      <td class="numeric grey">Not published<br><a href="mvp-internal/add-tags">Publish to GREAT</a></td>
        <td class="numeric"><a href="https://www.eventbrite.co.uk/edit?eid=39948447883">Edit</a></td>
       <td class="numeric"><a href="https://www.eventbrite.co.uk/myevent?eid=39948447883">Manage</a></td>
       <td class="numeric"><a href="https://admin.b2match.com/e/2832">Add</a></td>
     </tr>
     <tr>
       <th scope="row">DIT ‘Meet the buyer’ at Tradexpo</th>
-      <td class="numeric grey">Not published<br><a href="add-tags">Publish to GREAT</a></td>
+      <td class="numeric grey">Not published<br><a href="mvp-internal/add-tags">Publish to GREAT</a></td>
       <td class="numeric"><a href="https://www.eventbrite.co.uk/edit?eid=39948447883">Edit</a></td>
       <td class="numeric"><a href="https://www.eventbrite.co.uk/myevent?eid=39948447883">Manage</a></td>
       <td class="numeric"><a href="https://admin.b2match.com/e/2832">Add</a></td>
@@ -80,8 +80,8 @@ a.link:visited, a:visited {color:#005ea5 !important};
 <h2 class="heading-medium">Create new event</h2>
 
     <ul class="list numeric">
-      <li><a href="available-templates" class="link" target="_new">Start from a template</a></li>
-      <li><a href="scratch-warning" class="link" target="_new">Create from scratch</a></li>
+      <li><a href="mvp-internal/available-templates" class="link" target="_new">Start from a template</a></li>
+      <li><a href="mvp-internal/scratch-warning" class="link" target="_new">Create from scratch</a></li>
     </ul>
     </div>
   </div>
