--- a/app/views/create-event/mvp-internal/edit-triage.html
+++ b/app/views/create-event/mvp-internal/edit-triage.html
@@ -32,7 +32,7 @@
       
     <ul class="list numeric">
       <li><a href="https://www.eventbrite.co.uk/edit?eid=39948447883" class="link" >Change event details</a></li>
-      <li><a href="add-tages" class="link" >Change event tags (sector, market or target experience)</a></li>
+      <li><a href="add-tags" class="link" >Change event tags (sector, market or target experience)</a></li>
     </ul>
     </div>
 
