updates to event page on great

--- a/app/views/return-journey/great-events.html
+++ b/app/views/return-journey/great-events.html
@@ -1069,13 +1069,13 @@
         <div class="four columns persona-box container" style="display: flex;  flex-direction: row; width:1200px;">
 
             <article style="width:500px;">
-                <h3>Available events</h3>
-                <a href="#" class="great-btn" >Find relevant events</a>
+                <h3>Find an event</h3>
+                <a href="#" class="great-btn" >Upcoming events</a>
             </article>
 
             <article style="width:300px;">
-                <h3>Your events</h3>
-                <a href="/return-journey/signin-events" class="great-btn" >View your events</a>
+                <h3>Manage event attendance</h3>
+                <a href="/return-journey/signin-events" class="great-btn" >Your events</a>
             </article>
         </div>
     </section>
