jquery bug fix https

--- a/app/views/return-journey/great-home.html
+++ b/app/views/return-journey/great-home.html
@@ -813,7 +813,8 @@
 
 </style>
 
-<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
 <script src="/public/javascripts/script.f990947fa33a.js" type="text/javascript"></script>
 <script src="/public/javascripts/dit.components.video.a7db8db23c2d.js" type="text/javascript"></script>
 
