Updated cancel joruney

--- a/app/views/return-journey/cancel-success.html
+++ b/app/views/return-journey/cancel-success.html
@@ -3650,9 +3650,9 @@
 		<div class="input-field-container">
 
 
-			<h2 style="margin-bottom:40px;">Your attendance has been cancelled</h2>
+			<h2 style="margin-bottom:40px;">We've received your request to cancelled you attendance</h2>
 
-			<p>Thanks you for cancelling.</p>
+			<p>You'll receive an email once your place has been cancelled.</p>
 
 			<p style="margin-bottom:10px;">Your place can now be given to another attendee.</p>
 
