--- a/app/views/return-journey/cancel-confirm.html
+++ b/app/views/return-journey/cancel-confirm.html
@@ -3659,6 +3659,11 @@
 			</div>
 
 
+			<div>
+				<p style="font-weight:700; margin-bottom:0px;">Additional details</p>
+				<p style="margin-bottom:5px;">For example: Also cancel the other people I've booked.</p>
+				<textarea style="width: 600px; height: 100px; min-height: 100px; margin-bottom:40px;"></textarea>
+			</div>
 
 
 
