--- a/app/views/return-journey/cancel-confirm.html
+++ b/app/views/return-journey/cancel-confirm.html
@@ -3685,7 +3685,7 @@
 				font-size: 19px;
 				font-family: 'Roboto', sans-serif;
 				font-weight:400;"
-			>Cancel attendance - I am not attending</a>
+			>Cancel attendance</a>
 			<!--  <button class="primaryAction" type="submit">Login</button>   -->
 
 			<p>
