email from betamatch updated

--- a/app/views/return-journey/cancel-success.html
+++ b/app/views/return-journey/cancel-success.html
@@ -3554,7 +3554,7 @@
 <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
 
 
-<header role="banner">
+<header role="banner" style="width:600px;">
 	<div class="navigation">
 		<div class="navigation-strip background--dark-navy">
 			<div class="outer-container">
@@ -3643,7 +3643,7 @@
 </header>
 
 
-<div id="content" class="sso-content outer-container">
+<div id="content" class="sso-content outer-container" style="width:600px;">
 	<div class="">
 
 
