updated signin link

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,9 @@
 
       <br/>
       <p><a href="/return-journey/great-home">Great homepage</a></p>
+      <p><a href="/return-journey/eb-email">email 1</a></p>
+
+      <p><a href="/return-journey/b2match-email">email 2</a></p>
       <br/>
       <br/>
 
