--- a/app/views/return-journey/great-home.html
+++ b/app/views/return-journey/great-home.html
@@ -933,8 +933,8 @@
                 <ul aria-label="Account links" class="navigation account-links">
 
 
-                    <li class="authenticated"><a href="#" class="profile">Profile</a></li>
-                    <li class="authenticated"><a href="#" class="signout">Sign out</a></li>
+                    <!--<li class="authenticated"><a href="#" class="profile">Profile</a></li>-->
+                    <li><a href="/return-journey/signin-general" class="signout">Sign in</a></li>
 
 
                 </ul><span class="greeting"></span>
