updated fixes for testing on friday

--- a/app/views/return-journey/great-home.html
+++ b/app/views/return-journey/great-home.html
@@ -934,7 +934,7 @@
 
 
                     <!--<li class="authenticated"><a href="#" class="profile">Profile</a></li>-->
-                    <li><a href="/return-journey/signin-general" class="signout">Sign in</a></li>
+                    <li><a href="/return-journey/signin-general" >Sign in</a></li>
 
 
                 </ul><span class="greeting"></span>
