--- a/app/views/return-journey/great-sud-events.html
+++ b/app/views/return-journey/great-sud-events.html
@@ -3994,7 +3994,8 @@
                                 5 December 2017 to 7 January 2018
                             </p>
                             <p class="">
-                                <a href="#" style="text-decoration: underline">View event</a><br>
+                                <a href="/event-page" style="text-decoration: underline">View event</a><br>
+                                <a href="/return-journey/signin-b2match-buyers" style="text-decoration: underline">Book meetings</a><br>
                                 <a href="/return-journey/cancel-confirm" style="text-decoration: underline">Cancel attendance</a><br>
                             </p>
                         </div>
@@ -4010,9 +4011,9 @@
                                 8 July 2017 to 14 July 2017
                             </p>
                             <p class="">
-                                <a href="/return-journey/signin-b2match" style="text-decoration: underline">Book meetings</a><br>
                                 <a href="#" style="text-decoration: underline">View event</a><br>
-                                <a href="#" style="text-decoration: underline">Cancel attendance</a><br>
+                                <a href="#" style="text-decoration: underline">View meetings</a><br>
+                                <!-- <a href="#" style="text-decoration: underline">Cancel attendance</a><br> -->
                             </p>
                         </div>
                     </div>
@@ -4028,7 +4029,7 @@
                             </p>
                             <p class="">
                                 <a href="#" style="text-decoration: underline">View event</a><br>
-                                <a href="#" style="text-decoration: underline">Cancel attendance</a><br>
+                                <!-- <a href="#" style="text-decoration: underline">Cancel attendance</a><br> -->
                             </p>
                         </div>
                     </div>
