--- a/app/views/return-journey/signin-b2match-buyers.html
+++ b/app/views/return-journey/signin-b2match-buyers.html
@@ -993,7 +993,6 @@
 								</li>
 							</ul>
 						</div>
-
 					</li>
 				</ul>
 			</nav>
@@ -1046,7 +1045,7 @@
 				</div>
 
 
-				<a href="/return-journey/great-sud-events"
+				<a href="https://tradeshow.b2match.io/participants#/"
 				   style="
 					width: auto;
 					background-color: #00549F;
