--- a/app/views/return-journey/signin-b2match-profile.html
+++ b/app/views/return-journey/signin-b2match-profile.html
@@ -936,8 +936,10 @@
 			<div class="account-locale-links">
 				<ul aria-label="Account links" class="navigation account-links">
 
+
 					<!--<li class="authenticated"><a href="#" class="profile">Profile</a></li>-->
 					<li><a href="/return-journey/signin-general" >Sign in</a></li>
+
 
 				</ul><span class="greeting"></span>
 				<a class="LanguageSelectorDialog-Tracker bidi-ltr" href="#" aria-controls="LanguageSelectorDialog_1513072894430_007526234367374318"><span class="lang">en</span><span class="label">UK</span></a></div>
@@ -993,7 +995,6 @@
 								</li>
 							</ul>
 						</div>
-
 					</li>
 				</ul>
 			</nav>
@@ -1046,7 +1047,7 @@
 				</div>
 
 
-				<a href="/return-journey/great-sud-events"
+				<a href="https://tradeshow.b2match.io/my#/"
 				   style="
 					width: auto;
 					background-color: #00549F;
