--- a/app/views/return-journey/eb-email.html
+++ b/app/views/return-journey/eb-email.html
@@ -185,18 +185,18 @@
 <p><span style="font-size:medium"><strong>Next steps and useful links</strong></span></p>
 <ul>
 	<ul>
-		<li><span style="font-size:small"><strong>Browse buyers and request meetings</strong>: you can browse attending buyers and send them requests for meeting appointments during the event,&nbsp;<a href="https://tradeshow.b2match.io/my#/" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en-GB&amp;q=https://tradeshow.b2match.io/my%23/&amp;source=gmail&amp;ust=1513258976994000&amp;usg=AFQjCNH6xQC0Q1HuJxJEbB9r6I8C8cgY7Q">on&nbsp;b2match</a>&nbsp;(simply register a b2match profile to start arranging meetings)</span></li>
-		<li><span style="font-size:small"><strong>View latest event agenda</strong>: <a href="https://diteventprototype.herokuapp.com/return-journey/cancel-confirm" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en-GB&amp;q=https://diteventprototype.herokuapp.com/return-journey/cancel-confirm&amp;source=gmail&amp;ust=1513258976994000&amp;usg=AFQjCNF9-ny9lCFZMs-gYHfh2rPOeVCTgg">by visiting the event webpage</a></span></li>
-		<li><span style="font-size:small"><strong>Cancel</strong>: if you no longer wish to attend this event, please let us know <a href="https://diteventprototype.herokuapp.com/return-journey/cancel-confirm" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en-GB&amp;q=https://diteventprototype.herokuapp.com/return-journey/cancel-confirm&amp;source=gmail&amp;ust=1513258976994000&amp;usg=AFQjCNF9-ny9lCFZMs-gYHfh2rPOeVCTgg">by visiting the cancellation page</a> so that the place can be freed up for others who wish to attend</span></li>
+		<li><span style="font-size:small"><strong>Browse buyers and request meetings</strong>: you can browse attending buyers and send them requests for meeting appointments during the event,&nbsp;<a href="/return-journey/signin-b2match-profile" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en-GB&amp;q=https://tradeshow.b2match.io/my%23/&amp;source=gmail&amp;ust=1513258976994000&amp;usg=AFQjCNH6xQC0Q1HuJxJEbB9r6I8C8cgY7Q">on&nbsp;b2match</a>&nbsp;(simply register a b2match profile to start arranging meetings)</span></li>
+		<li><span style="font-size:small"><strong>View latest event agenda</strong>: <a href="/event-page" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en-GB&amp;q=https://diteventprototype.herokuapp.com/return-journey/cancel-confirm&amp;source=gmail&amp;ust=1513258976994000&amp;usg=AFQjCNF9-ny9lCFZMs-gYHfh2rPOeVCTgg">by visiting the event webpage</a></span></li>
+		<li><span style="font-size:small"><strong>Cancel</strong>: if you no longer wish to attend this event, please let us know <a href="/return-journey/signin-cancel" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en-GB&amp;q=https://diteventprototype.herokuapp.com/return-journey/cancel-confirm&amp;source=gmail&amp;ust=1513258976994000&amp;usg=AFQjCNF9-ny9lCFZMs-gYHfh2rPOeVCTgg">by visiting the cancellation page</a> so that the place can be freed up for others who wish to attend</span></li>
 	</ul>
 </ul>
-</span><p><span style="font-size:small">For any general questions or requests, please get in touch using the event organiser contact found <a href="https://diteventprototype.herokuapp.com/return-journey/cancel-confirm" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en-GB&amp;q=https://diteventprototype.herokuapp.com/return-journey/cancel-confirm&amp;source=gmail&amp;ust=1513258976994000&amp;usg=AFQjCNF9-ny9lCFZMs-gYHfh2rPOeVCTgg">on the event webpage</a>.</span></p><span class="m_-5824111697942845163gmail-">
+</span><p><span style="font-size:small">For any general questions or requests, please get in touch using the event organiser contact found <a href="/event-pages" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en-GB&amp;q=https://diteventprototype.herokuapp.com/return-journey/cancel-confirm&amp;source=gmail&amp;ust=1513258976994000&amp;usg=AFQjCNF9-ny9lCFZMs-gYHfh2rPOeVCTgg">on the event webpage</a>.</span></p><span class="m_-5824111697942845163gmail-">
 <p><span style="font-size:small">We look forward to seeing you on the day. </span></p>
 <p><span style="font-size:small">Kind regards,<br> <span style="font-size:small">DIT Events</span><span style="font-size:small"><br></span></span></p>
 
         </span></td>
-												</tr>
-												</tbody></table><span class="m_-5824111697942845163gmail-">
+			</tr>
+			</tbody></table><span class="m_-5824111697942845163gmail-">
 
         <br>
 
