--- a/app/views/return-journey/great-events.html
+++ b/app/views/return-journey/great-events.html
@@ -934,10 +934,8 @@
             <div class="account-locale-links">
                 <ul aria-label="Account links" class="navigation account-links">
 
-
-                    <li class="authenticated"><a href="#" class="profile">Profile</a></li>
-                    <li class="authenticated"><a href="#" class="signout">Sign out</a></li>
-
+                    <!--<li class="authenticated"><a href="#" class="profile">Profile</a></li>-->
+                    <li><a href="/return-journey/signin-general" >Sign in</a></li>
 
                 </ul><span class="greeting"></span>
                 </div>
