updated email content

--- a/app/views/return-journey/b2match-email.html
+++ b/app/views/return-journey/b2match-email.html
@@ -869,6 +869,7 @@
 			display: none;
 		}
 	</style>
+
 	<noscript>
 		&lt;style type="text/css"&gt;
 		.navigation-toggle {
@@ -882,6 +883,7 @@
 		}
 		&lt;/style&gt;
 	</noscript>
+
 	<style id="dit-responsive-css" type="text/css">@media (min-width: 768px) {
 		#dit-responsive-size{
 			z-index: 0;
@@ -964,7 +966,7 @@
 
 				<p>Dear [attendee name],</p>
 
-				<p>Your b2match profile for the above event has now been activated.</p>
+				<p>You're now set up with a b2match account for the event, DIT Meet the Buyer at Tradexpo.</p>
 
 				<p>This means that you are now visible to attending buyers and can start using b2match to:</p>
 
@@ -974,15 +976,14 @@
 				</ul>
 
 				<p>If you want to manage your general registration for this event, visit
-					<a href="https://diteventprototype.herokuapp.com/return-journey/great-sud-events">Your events dashboard</a> on the
-					<a href="https://diteventprototype.herokuapp.com/return-journey/great-home">GREAT website</a></p>
+					<a href="https://diteventprototype.herokuapp.com/return-journey/great-sud-events">Your events dashboard on the GREAT website</a>
+				</p>
 
 				<p>We hope that you enjoy the event.</p>
 
-				<p>Best wishes,</p>
-
-				<p>DIT Events</p>
-
+				<p>Best wishes,
+					<br>DIT Events
+				</p>
 
 			</div>
 
