updates to B2match email

--- a/app/views/return-journey/b2match-email.html
+++ b/app/views/return-journey/b2match-email.html
@@ -976,7 +976,7 @@
 				</ul>
 
 				<p>If you want to manage your general registration for this event, visit
-					<a href="https://diteventprototype.herokuapp.com/return-journey/great-sud-events">Your events dashboard on the GREAT website</a>
+					<a href="https://diteventprototype.herokuapp.com/return-journey/great-sud-events">Your events dashboard</a> on the GREAT website
 				</p>
 
 				<p>We hope that you enjoy the event.</p>
